syntax = "proto3";
option go_package = "github.com/aglide100/speech-test/cluster/pb/svc/audio";

message Requirement {
    string content = 1;
    string speaker = 2;
    string token = 3;
}

message AudioResult {
    Audio audio = 1;
    Auth auth = 2;
    Job job = 3;
}

message Audio {
    bytes data = 1;
}

message Request {
    Auth auth = 1;
    string content = 2;
    string speaker = 3;
    string path = 4;
}

message Error {
    string msg = 1;
}

message Auth {
    string token = 1;
    string from = 2;
}

message Job {
    string content = 1;
    string speaker = 2;
    string id = 3;
}

message Checking {
    Auth auth = 1;
}

service AudioService {
    rpc GenerateAudio(Requirement) returns (Audio);
    rpc MakingNewJob(Request) returns (Error);
    rpc CheckingJob(Checking) returns (Job);
    rpc SendingResult(AudioResult) returns (Error);
}
